--- a/imgclassification.ipynb
+++ b/imgclassification.ipynb
@@ -33,7 +33,7 @@
     "    os.mkdir('models')\n",
     "    \n",
     "print('TensorFlow version:', tf.__version__)\n",
-    "print('Is using GPU?', tf.test.is_gpu_available())"
+    "print('GPU', tf.test.is_gpu_available())"
    ]
   },
   {
